tests/snapshots/snapshots__quadratic_inequality_output.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"x^2 >= 4\")"
---
status: exit status: 0
stdout:
-4 + x^2 >= 0
stderr:
