tests/snapshots/snapshots__stats_output.snap
---
source: tests/snapshots.rs
expression: "run_cli_args([\"--stats\", \"exists x1. x1^2 + x0 + x2 = 0\"])"
---
status: exit status: 0
stdout:
x0 + x2 <= 0
stderr:
stats:
  quantifier calls: 1
  cells constructed: 35
  leaf cells: 23
  sector cells: 24
  section cells: 11
  projection levels: 3
  projection polynomials: 10
  lifting order count: 1
  lifting order 0: x0 -> x2 -> x1
