tests/snapshots/snapshots__unbounded_quadratic_inequality_output.snap
---
source: tests/snapshots.rs
expression: "run_cli_args([\"--variable-order=y\", \"exists x. x^2 + y > -1\"])"
---
status: exit status: 0
stdout:
true
stderr:
