tests/snapshots/snapshots__vieta_quadratic_root_condition.snap
---
source: tests/snapshots.rs
expression: "run_cli(\"exists x0. exists x1. x2=x0+x1&&x3=x0*x1\")"
---
status: exit status: 0
stdout:
((x2 < 0) && (x2^2 > 0) && (x2^2 - 4*x3 > 0)) || ((x2 < 0) && (x2^2 > 0) && (-x3 < 0) && (x2^2 - 4*x3 = 0)) || ((x2 = 0) && (x2^2 = 0) && (-x3 > 0) && (x2^2 - 4*x3 > 0)) || ((x2 = 0) && (x2^2 = 0) && (-x3 = 0) && (x2^2 - 4*x3 = 0)) || ((x2 > 0) && (x2^2 > 0) && (x2^2 - 4*x3 > 0)) || ((x2 > 0) && (x2^2 > 0) && (-x3 < 0) && (x2^2 - 4*x3 = 0))
stderr:
